Can request CollectionViewModel itemAtIndexPath with nil

This CL makes sure that if CollectionViewModel is asked for the item at a nil
index path, it fails instead of treating it as requesting 0-0.

BUG=685621

Review-Url: https://codereview.chromium.org/2659593002
Cr-Commit-Position: refs/heads/master@{#446336}

Former-commit-id: 9899c468303d9472eeac076b486689753545f827